# Barsik-bot

./: .gitignore  LICENSE  README.md  changelog.md  config.example.toml  poetry.toml  pyproject.toml  requirements.txt
barsik_bot/: __init__.py  __main__.py  bot.py  config.py  docs.py  errors.py  locale.py  utils.py
barsik_bot/components/: __init__.py  embed_scroller.py
barsik_bot/embeds/: __init__.py  docs.py
barsik_bot/extensions/: help.py
cat_bot/: bot.py
cat_bot/cogs/: clear.py  events.py  help.py
cat_bot/utils/: bot_config.py  bot_locale.py
src/: bot-docs.json  command-info.json
src/locales/: en_US.json  ru.json  uk.json
