[tool.poetry]
name = "barsik-bot"
version = "0.3.0"
description = "Discord bot with ðŸ Python"
authors = ["TiymyrTM"]
readme = "README.md"
repository = "https://github.com/Timyr-TM/Cat-Bot"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12.*"
disnake = "2.9.*"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
poethepoet = "^0.25.0"

[tool.poe.tasks.bot]
cmd = "python -m barsik_bot"
help = "run the bot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"